Remove the vertical line at 120 char count

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "files.associations": {
         "*.kit": "toml",
     },
-    "editor.rulers": [120],
+    "editor.rulers": [],
 
     // Python modules search paths:
     "python.analysis.extraPaths": [
